--- a/pom.xml
+++ b/pom.xml
@@ -31,5 +31,11 @@
       <version>5.6.15.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.persistence</groupId>
+      <artifactId>javax.persistence-api</artifactId>
+      <version>2.2</version>
+    </dependency>
+
   </dependencies>
 </project>
