--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
       <version>2.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.opencsv</groupId>
+      <artifactId>opencsv</artifactId>
+      <version>5.7.1</version>
+    </dependency>
+
   </dependencies>
 </project>
